# rvuln0-scan

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  feature-implementation-plan.md  install.sh  tickets-v0.3.0.md
.github/workflows/: ci.yml
docs/decisions/: ADR-001-rust-toolchain-and-http-stack.md  ADR-002-vulnerability-check-engine.md  ADR-003-cli-design.md
examples/: custom-checks.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  types.rs
src/check/: builtin.rs  loader.rs  matcher.rs  mod.rs
src/filter/: mod.rs
src/fuzz/: mod.rs  wordlist.rs
src/ghost/: mod.rs
src/probe/: http.rs  mod.rs  tech.rs  tls.rs  ws.rs
src/report/: html.rs  json.rs  mod.rs  sarif.rs  table.rs
tests/: integration.rs
