[package]
name = "rvuln0-scan"
version = "0.1.0"
edition = "2021"
description = "Fast Rust vulnerability scanner for remote services and sites"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
x509-parser = "0.16"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
